# seccardgamecli

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Changes.md  PROJECT.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
game_lib/: Cargo.toml  README.md
game_lib/src/: errors.rs  lib.rs
game_lib/src/cards/: card_content.rs  card_model.rs  errors.rs  game_model.rs  mod.rs  model.rs
game_lib/src/cards/game_variants/: mod.rs  scenario.rs
game_lib/src/cards/properties/: attack_costs.rs  card_content.rs  cost_modifier.rs  description.rs  duration.rs  effect.rs  effect_description.rs  fix_cost.rs  fix_modifier.rs  incident_impact.rs  mod.rs  target.rs  title.rs
game_lib/src/cards/serialization/: helper.rs  mod.rs  serialization.rs
game_lib/src/cards/types/: attack.rs  card_model.rs  evaluation.rs  event.rs  lucky.rs  mod.rs  oopsie.rs
game_lib/src/cards/world/: deck.rs  mod.rs  resources.rs  result.rs
game_lib/src/file/: cards.rs  general.rs  mod.rs  repository.rs  serialization.rs
game_lib/src/world/: board.rs  current_turn.rs  deck.rs  game.rs  game_path_test.rs  mod.rs  part_of_hundred.rs  reputation.rs  resource_fix_multiplier.rs  resources.rs
game_lib/src/world/actions/: action_error.rs  add_reputation.rs  add_resources.rs  caclulate_board.rs  calculate_board.rs  close_attack.rs  close_evaluation.rs  close_event.rs  close_lucky.rs  close_oopsie.rs  draw_card.rs  mod.rs  remove_resources.rs  subtract_reputation.rs  subtract_resources.rs  use_lucky_card.rs
game_setup/: Cargo.toml
game_setup/src/: lib.rs  results.rs
game_setup/src/config/: config.rs
game_setup/src/creation/: create.rs
gui/: Cargo.toml  index.html  readme.md
gui/assets/: manifest.json
gui/src/: app.rs  card.rs  card_view_model.rs  card_window.rs  command_handler.rs  control_panel.rs  lib.rs  main.rs  messaging.rs  readme.md  side_panel.rs  start.rs
gui/src/actions/: command.rs  command_handler.rs  mod.rs
gui/src/actions/command_handler/: action_result_handling.rs  card.rs  control_panel.rs
gui/src/card_window/: card_view_model.rs  card_window.rs  mod.rs
gui/src/components/: components.rs  label_with_input.rs  mod.rs  readme.md
gui/src/controls/: components.rs  game_status_display.rs  messageing.rs  mod.rs  next_round_control.rs  resource_control.rs  tweak_control.rs
gui/src/game_view/: mod.rs  side_panel.rs  state.rs
gui/src/game_view/actions/: command.rs  command_handler.rs  mod.rs  readme.md
gui/src/game_view/actions/command_handler/: action_result_handling.rs  card.rs  control_panel.rs
gui/src/game_view/card_window/: card_window.rs  mod.rs  readme.md
gui/src/game_view/components/: components.rs
gui/src/game_view/side_panel/: game_status_display.rs  next_round_control.rs  reputation_control.rs  resource_control.rs  tweak_control.rs
gui/src/init_view/: init_view.rs  mod.rs  state.rs
gui/src/side_panel/: game_status_display.rs  next_round_control.rs  readme.md  reputation_control.rs  resource_control.rs  tweak_control.rs
seccardgame/: Cargo.toml
seccardgame/src/: cards.rs  main.rs
seccardgame/src/cards/: crud.rs  mod.rs  stats.rs
seccardgame/src/cli/: cli_result.rs  config.rs  mod.rs  prompts.rs
seccardgame/src/game/: create.rs  mod.rs  openui.rs  play.rs
seccardgame/src/migrations/: mod.rs  version_one.rs  version_three.rs  version_two.rs
