[package]
name = "game_lib"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = { version = "0.8.5", features = [] }
log = "0.4.20"
uuid = { version = "1.7.0", features = ["v4"] }
