[package]
name = "game_lib"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = { version = "0.8.5", features = [] }
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "dummy", "uuid"] }
rstest = "0.22.0"
