[package]
name = "game_setup"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
game_lib = { path = "../game_lib" }
log = "0.4.22"
git2 = "0.19.0"

[dev-dependencies]
tempfile = "3.12.0"
testing_logger = "0.1.1"

[target.'cfg(target_arch = "aarch64-apple-darwin")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }