[package]
name = "seccardgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
dialoguer = "0.11.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
game_lib = { path = "../game_lib" }
log = "0.4.20"
git2 = "0.18.1"