[package]
name = "seccardgame"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
dialoguer = "0.11.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
game_lib = { path = "../game_lib" }
game_ui = { path = "../gui" }
log = "0.4.20"
flexi_logger = "0.27.3"
git2 = "0.18.1"
rand = { version = "0.8.5", features = [] }
crossterm = "0.27.0"

[dev-dependencies]
tempfile = "3.9.0"
testing_logger = "0.1.1"

[build-dependencies]
cc = "1.0"

[target.'cfg(target_arch = "aarch64-apple-darwin")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }