[package]
name = "seccardgame"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.18"
dialoguer = "0.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
game_lib = { path = "../game_lib" }
game_setup = { path = "../game_setup" }
game_ui = { path = "../gui" }
log = "0.4.22"
flexi_logger = "0.29.0"
git2 = "0.19.0"
rand = { version = "0.8.5", features = [] }
crossterm = "0.28.1"

[dev-dependencies]
tempfile = "3.12.0"
testing_logger = "0.1.1"

[build-dependencies]
cc = "1.1"

[target.'cfg(target_arch = "aarch64-apple-darwin")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }